--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.0.1",
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.25",
+    "npx": "^10.2.2",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
